[gd_scene load_steps=3 format=3 uid="uid://bxryhcyjip35q"]

[ext_resource type="Script" uid="uid://b63vw8bb6lxcq" path="res://Scripts/signpost.gd" id="1_fnf8o"]
[ext_resource type="Texture2D" uid="uid://bcv3t11g13sjb" path="res://Assets/Signposts/signposts.png" id="1_s4i5e"]

[node name="Signpost" type="CanvasLayer"]
script = ExtResource("1_fnf8o")

[node name="TextureRect" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(640, 135)
scale = Vector2(15, 5)
texture = ExtResource("1_s4i5e")
region_enabled = true
region_rect = Rect2(32, 0, 32, 32)

[node name="Movement" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="Movement"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Move with
[A] and [D]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Jump" type="Node2D" parent="."]
visible = false

[node name="Label2" type="Label" parent="Jump"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Jump with [W]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Checkpoint" type="Node2D" parent="."]
visible = false

[node name="Label3" type="Label" parent="Checkpoint"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "These signposts
are checkpoints"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="Node2D" parent="."]
visible = false

[node name="Label4" type="Label" parent="Enemy"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Jump on enemies
to defeat them"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bacon" type="Node2D" parent="."]
visible = false

[node name="Label5" type="Label" parent="Bacon"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "You eat the mushroom
bacon and feel stronger!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Punch" type="Node2D" parent="."]
visible = false

[node name="Label6" type="Label" parent="Punch"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Punch rubble
with [P]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tree" type="Node2D" parent="."]
visible = false

[node name="Label7" type="Label" parent="Tree"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Maybe you could
climb a tree?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dash" type="Node2D" parent="."]
visible = false

[node name="Label8" type="Label" parent="Dash"]
visible = false
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Jump with [W], then
Air Dash with [L]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label88" type="Label" parent="Dash"]
visible = false
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 27
text = "Press [LLL] before jumping,
then press [LLL] to
Jump and Air Dash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wall" type="Node2D" parent="."]
visible = false

[node name="Label9" type="Label" parent="Wall"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 29
text = "Wall jump by repeatedly
pressing  [W]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DontTouch" type="Node2D" parent="."]
visible = false

[node name="Label10" type="Label" parent="DontTouch"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Do not touch
the hot lava!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Touch" type="Node2D" parent="."]
visible = false

[node name="Label11" type="Label" parent="Touch"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "The Spicy Curry lets
you walk on lava!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JumpOff" type="Node2D" parent="."]
visible = false

[node name="Label12" type="Label" parent="JumpOff"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 64
text = "Jump!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DoubleJump" type="Node2D" parent="."]
visible = false

[node name="Label13" type="Label" parent="DoubleJump"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Press [LLL] twice
to Double Jump!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Escape" type="Node2D" parent="."]
visible = false

[node name="Label14" type="Label" parent="Escape"]
offset_left = 462.0
offset_top = 77.0
offset_right = 818.0
offset_bottom = 190.0
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 30
text = "Press [esc] to Save
and Return to Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaconTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="BaconTimer" to="." method="_on_bacon_timer_timeout"]
